# QtCMakeExtra

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  Qt5Core_HunterPlugin.cmake  Qt5Gui_ZZZ_HunterPlugin.cmake  Qt5MultimediaWidgets_ZZZ_HunterPlugin.cmake  Qt5Multimedia_QMultimediaDeclarativeModulePlugin.cmake  Qt5Multimedia_ZZZ_HunterPlugin.cmake  Qt5Network_ZZZ_HunterPlugin.cmake  Qt5Qml_QmlQtQuick2Plugin.cmake  Qt5Qml_ZZZ_HunterPlugin.cmake  Qt5Widgets_HunterPlugin.cmake  Qt5Widgets_HunterPlugin_5_11.cmake  Qt5Widgets_HunterPlugin_5_5.cmake  Qt5Widgets_HunterPlugin_5_6.cmake  Qt5Widgets_HunterPlugin_5_9.cmake  QtCMakeExtraHelpers.cmake
sources/: CMakeLists.txt  static_qt_QMultimediaDeclarativeModule.cpp  static_qt_QtQuick2Plugin.cpp
